#944: Fix header bar alignment

--- a/src/App.css
+++ b/src/App.css
@@ -81,6 +81,8 @@ textarea {
 
 .metriq-navbar-right {
   margin-top: 16px;
+  margin-left: auto; 
+  margin-right: 0;
 }
 
 .metriq-header {
@@ -124,10 +126,6 @@ textarea {
   display: flex;
   flex-direction: row;
   /* justify-content: center;*/
-}
-
-.metriq-navbar-spacer {
-  width: 16px;
 }
 
 .metriq-navbar-social-icon {
